test/sema/typeck/assign/lvalue-expected.out
error: lvalue expected for assignment
--> lvalue-expected.dora:1:10
 | fn f() { 1 = 3; }
            ~~~~~
 | 
1 error found.
