test/sema/typeck/assign/lvalue-expected.dora
fn f() { 1 = 3; }
